@@ -4,3 +4,4 @@
         lets put tinymce back in
         newsitems, test-driven
 0.0.2 - bugfixes. Being able to manage tgm
+        editing newsitems touches site
